Get profile for username check added